
[TestCommand_Docker/Fake_alpine_image - 1]
Checking if docker image ("alpine:non-existent-tag") exists locally...

---

[TestCommand_Docker/Fake_alpine_image - 2]
Docker command exited with code ("/usr/bin/docker pull -q alpine:non-existent-tag"): 1
STDERR:
> Error response from daemon: manifest for alpine:non-existent-tag not found: manifest unknown: manifest unknown
failed to pull container image: failed to run docker command

---

[TestCommand_Docker/Fake_image_entirely - 1]
Checking if docker image ("this-image-definitely-does-not-exist-abcde:with-tag") exists locally...

---

[TestCommand_Docker/Fake_image_entirely - 2]
Docker command exited with code ("/usr/bin/docker pull -q this-image-definitely-does-not-exist-abcde:with-tag"): 1
STDERR:
> Error response from daemon: pull access denied for this-image-definitely-does-not-exist-abcde, repository does not exist or may require 'docker login': denied: requested access to the resource is denied
failed to pull container image: failed to run docker command

---

[TestCommand_Docker/Real_Alpine_image - 1]
Checking if docker image ("alpine:3.18.9") exists locally...
Saving docker image ("alpine:3.18.9") to temporary file...
Scanning image "alpine:3.18.9"


Container Scanning Result (Alpine Linux v3.18) (Based on "alpine" image):
Total 2 packages affected by 3 known vulnerabilities (0 Critical, 1 High, 2 Medium, 0 Low, 0 Unknown) from 1 ecosystem.
3 vulnerabilities can be fixed.


Alpine:v3.18
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:/lib/apk/db/installed                                                                                              |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| musl           | 1.2.4-r2          | Fix Available |          1 | musl, musl-utils        | # 0 Layer        | alpine        |
| openssl        | 3.1.7-r0          | Fix Available |          2 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_Docker/Real_Alpine_image - 2]

---

[TestCommand_Docker/Real_empty_image_with_no_tag,_invalid_scan_target - 1]

---

[TestCommand_Docker/Real_empty_image_with_no_tag,_invalid_scan_target - 2]
"hello-world" is not a tagged image name

---

[TestCommand_Docker/Real_empty_image_with_tag - 1]
Checking if docker image ("hello-world:linux") exists locally...
Saving docker image ("hello-world:linux") to temporary file...
Scanning image "hello-world:linux"

---

[TestCommand_Docker/Real_empty_image_with_tag - 2]
No package sources found, --help for usage information.

---

[TestCommand_Docker/no_image_argument - 1]

---

[TestCommand_Docker/no_image_argument - 2]
please provide an image name or see the help document

---

[TestCommand_Docker/real_alpine_image_without_apk_extractor_enabled - 1]
Checking if docker image ("alpine:3.18.9") exists locally...
Saving docker image ("alpine:3.18.9") to temporary file...
Scanning image "alpine:3.18.9"

---

[TestCommand_Docker/real_alpine_image_without_apk_extractor_enabled - 2]
No package sources found, --help for usage information.

---

[TestCommand_Docker/real_empty_image_with_tag_and_allow_no_lockfiles_flag - 1]
Checking if docker image ("hello-world:linux") exists locally...
Saving docker image ("hello-world:linux") to temporary file...
Scanning image "hello-world:linux"
No package sources found
No issues found

---

[TestCommand_Docker/real_empty_image_with_tag_and_allow_no_lockfiles_flag - 2]

---

[TestCommand_ExplicitExtractors_WithDefaults/add_extractors - 1]
Scanning local image tarball "testdata/test-alpine-sbom.tar"

---

[TestCommand_ExplicitExtractors_WithDefaults/add_extractors - 2]
failed to load image from tarball with path "testdata/test-alpine-sbom.tar": open testdata/test-alpine-sbom.tar: no such file or directory

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out - 1]
Scanning local image tarball "testdata/test-alpine-sbom.tar"

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out - 2]
failed to load image from tarball with path "testdata/test-alpine-sbom.tar": open testdata/test-alpine-sbom.tar: no such file or directory

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out#01 - 1]
Scanning local image tarball "testdata/test-alpine-sbom.tar"

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out#01 - 2]
failed to load image from tarball with path "testdata/test-alpine-sbom.tar": open testdata/test-alpine-sbom.tar: no such file or directory

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out_with_presets - 1]
Scanning local image tarball "testdata/test-alpine-sbom.tar"

---

[TestCommand_ExplicitExtractors_WithDefaults/extractors_cancelled_out_with_presets - 2]
failed to load image from tarball with path "testdata/test-alpine-sbom.tar": open testdata/test-alpine-sbom.tar: no such file or directory

---

[TestCommand_ExplicitExtractors_WithoutDefaults/add_extractors - 1]
Scanning local image tarball "testdata/test-alpine-sbom.tar"

---

[TestCommand_ExplicitExtractors_WithoutDefaults/add_extractors - 2]
failed to load image from tarball with path "testdata/test-alpine-sbom.tar": open testdata/test-alpine-sbom.tar: no such file or directory

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out - 1]

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out - 2]
at least one extractor must be enabled

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out#01 - 1]

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out#01 - 2]
at least one extractor must be enabled

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out_with_presets - 1]

---

[TestCommand_ExplicitExtractors_WithoutDefaults/extractors_cancelled_out_with_presets - 2]
at least one extractor must be enabled

---

[TestCommand_HtmlFile - 1]
Scanning local image tarball "./testdata/test-alpine.tar"
failed to load image from tarball with path "./testdata/test-alpine.tar": open ./testdata/test-alpine.tar: no such file or directory

---

[TestCommand_OCIImage/Invalid_path - 1]
Scanning local image tarball "../../testdata/locks-manyoci-image/no-file-here.tar"

---

[TestCommand_OCIImage/Invalid_path - 2]
failed to load image from tarball with path "../../testdata/locks-manyoci-image/no-file-here.tar": open ../../testdata/locks-manyoci-image/no-file-here.tar: no such file or directory

---
